src/objects/UserDefinition__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CI_Token__c</fullName>
        <label>CI Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Username__c</fullName>
        <label>CI Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCS_Token__c</fullName>
        <label>VCS Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCS_Username__c</fullName>
        <label>VCS Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CI User Definition</label>
</CustomObject>